--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 html {
     background-color: white;
+    font-family: 'IBM Plex Sans', sans-serif;
     font-size: 14px;
 }
 
@@ -8,23 +9,113 @@ main {
     padding: 0 2rem;
     width: 40vw;
     height: 90vh;
-    border: 3px solid black;
-    border-radius: 50px;
-    background-color: beige;
+    border-top: 3px solid black;
+    border-bottom: 3px solid black;
+    border-radius: 0px 30px;
+    background-image: linear-gradient(to right, #8EB3E6 , #C6EBFF);
     display: flex;
     flex-direction: column;
     justify-content: space-around;
 }
+@media only screen and (max-width: 700px) {
+    main {
+        margin: 20px auto;
+        width: 60vw;
+        height: 90vh;
+    }
+}
+@media only screen and (max-width: 500px) {
+    main {
+        margin: 10px auto;
+        width: 70vw;
+        height: 95vh;
+    }
+}
+@media only screen and (max-width: 400px) {
+    main {
+        margin: auto;
+        width: 80vw;
+        height: 90vh;
+    }
+}
+@media only screen and (max-width: 300px) {
+    main {
+        padding: 0 1rem;
+        margin: auto;
+        width: 85vw;
+        height: 90vh;
+    }
+}
+
+
+main .victory {
+    background-image: linear-gradient(to right, #e69b8e , #feffc6);
+}
 
 h1 {
+    font-family: 'Orbitron', sans-serif;
     font-size: 4rem;
-    color: darkblue;
+    color: #3C4B61;
     text-align: center;
+    margin: 0;
+}
+@media only screen and (max-width: 950px) {
+    h1 {
+        font-size: 3rem;
+    }
+}
+@media only screen and (max-width: 453px) {
+    h1 {
+        font-size: 2rem;
+    }
+}
+
+h3 {
+    font-family: 'Orbitron', sans-serif;
+    color: #3C4B61;
+    font-size: 1.6rem;
+    text-align: center;
+    margin: 0;
+}
+@media only screen and (max-width: 950px) {
+    .h3{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    h3 {
+        font-size: 1.3rem;
+        margin: 0 0.8rem;
+    }
+}
+@media only screen and (max-width: 453px) {
+    .h3{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    h3 {
+        font-size: 1.1rem;
+        margin: 0 0.5rem;
+    }
 }
 
 p {
+    margin: 0;
     font-size: 1.5rem;
-    text-align: center;
+    text-align: justify;
+}
+@media only screen and (max-width: 950px) {
+    p {
+        font-size: 1.2rem;
+        line-height: 1.3rem;
+    }
+}
+@media only screen and (max-width: 453px) {
+    p {
+        font-size: 1rem;
+        line-height: 1.2rem;
+    }
 }
 
 .dice--section {
@@ -32,6 +123,22 @@ p {
     grid-template-columns: repeat(5, 1fr);
     gap: 15px 20px;
     margin: 20px;
+}
+@media only screen and (max-width: 950px) {
+    .dice--section {
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        gap: 10px 15px;
+        margin: 0.5rem;
+    }
+}
+@media only screen and (max-width: 453px) {
+    .dice--section {
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        gap: 7px 10px;
+        margin: 0;
+    }
 }
 
 .die_held {
@@ -46,7 +153,8 @@ p {
 .die {
     align-items: center;
     max-height: 100%;
-    max-width: 100%;
+    width: 100%;
+    max-width: 75px;
     border: 1px solid #783627;
     border-radius: 10px;
     cursor: pointer;
@@ -54,13 +162,22 @@ p {
 }
 
 button {
+    font-family: 'Orbitron', sans-serif;
     margin: 0 auto;
+    margin-bottom: 0.5rem;
     font-size: 1.2rem;
-    background-color: bisque;
+    background-color: #3C4B61;
+    color: #CFD6E0;
     border-radius: 15px;
     box-shadow: 1px 1px 4px grey;
-    width: 25%;
     padding: 1rem;
     cursor: pointer;
+}
+@media only screen and (max-width: 453px) {
+    button {
+        margin-bottom: 0.3rem;
+        font-size: 1rem;
+        padding: 0.5rem;
+    }
 }
 
