--- a/src/index.css
+++ b/src/index.css
@@ -141,21 +141,23 @@ p {
     }
 }
 
-.die_held {
-    align-items: center;
-    max-height: 93%;
-    max-width: 93%;
-    border: 3px solid black;
-    border-radius: 10px;
-    cursor: pointer;
-}
-
 .die {
     align-items: center;
     max-height: 100%;
     width: 100%;
     max-width: 75px;
-    border: 1px solid #783627;
+    border: 3px solid #e0cfcb;
+    border-radius: 10px;
+    cursor: pointer;
+    box-shadow: 1px 1px 1px #783627;
+}
+
+.die_held {
+    align-items: center;
+    max-height: 100%;
+    width: 100%;
+    max-width: 75px;
+    border: 3px solid black;
     border-radius: 10px;
     cursor: pointer;
     box-shadow: 1px 1px 1px #783627;
